# gar

./: README.org
service-dba/: Procfile  manage.py  pyproject.toml
service-dba/service_dba/: settings.py  urls.py  wsgi.py
service-person/: package.json
service-person/app/views/layouts/: application.html.erb
service-person/config/: application.rb  cable.yml  credentials.yml.enc
service-person/config/environments/: production.rb
service-pingpong/: Dockerfile  Procfile  README.org  README.rst  docker-compose.yml  pyproject.toml
service-pingpong/service_pingpong/: __init__.py  __main__.py
service-pingpong/tests/: test_service_pingpong.py
service-tcp-echo/: Cargo.toml  README.org
service-tcp-echo/src/: main.rs
tutorial-rails-hello-world/: .dockerignore  Dockerfile  Procfile  README.org  docker-compose.yml  package.json
tutorial-rails-hello-world/app/views/layouts/: application.html.erb
tutorial-rails-hello-world/config/: application.rb  cable.yml  credentials.yml.enc
tutorial-rails-hello-world/config/environments/: production.rb
