[tool.poetry]
name = "service-dba"
version = "0.1.0"
description = ""
authors = ["sximada <50688746+sximada@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
